# GaussDB-Python-Driver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GaussDB差异清单.md  Windows测试指导手册.md  常见问题.md  真实库测试说明.md  需求分析.md  验证记录.md
examples/: sqlalchemy_quickstart.py
scripts/: check_windows_env.py  run_integration_probe.py  run_syntax_probe.py
src/gaussdb_sqlalchemy/: __init__.py  alembic.py  base.py  dbapi.py  dialect.py  jdbc.py  jdbc_dbapi.py  requirements.py
tests/: test_alembic.py  test_base.py  test_compatibility_scenarios.py  test_dbapi.py  test_dialect.py  test_edge_cases10.py  test_edge_cases11.py  test_edge_cases12.py  test_edge_cases5.py  test_edge_cases6.py  test_edge_cases7.py  test_edge_cases8.py  test_edge_cases9.py  test_integration_env.py  test_jdbc.py  test_project_metadata.py
