[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussdb-sqlalchemy-python-driver"
version = "0.1.0"
description = "Lightweight SQLAlchemy JDBC dialect for Huawei GaussDB centralized 505.1."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "GaussDB Python Driver Contributors" }]
keywords = ["gaussdb", "sqlalchemy", "database", "driver", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SQLAlchemy>=2.0,<2.2",
    "JayDeBeApi>=1.2.3",
    "JPype1>=1.5",
]

[project.optional-dependencies]
test = [
    "alembic>=1.13",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/jarrenL/GaussDB-SQLAlchemy-Python-Driver"
Issues = "https://github.com/jarrenL/GaussDB-SQLAlchemy-Python-Driver/issues"

[project.entry-points."sqlalchemy.dialects"]
gaussdb = "gaussdb_sqlalchemy.jdbc:GaussDBDialect_jdbc"
"gaussdb.jdbc" = "gaussdb_sqlalchemy.jdbc:GaussDBDialect_jdbc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaussdb_sqlalchemy = ["gaussdbjdbc.jar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "integration: tests that require a live GaussDB database",
]
